Updated readme and composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "toulousevictor@gmail.com"
         }
     ],
+    "homepage": "https://github.com/vctls/entity-bundle",
     "autoload": {
         "psr-4": { "Vctls\\EntityBundle\\": "" }
     },
