--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "symfony/dependency-injection" : "~2.3|~3.0",
         "symfony/http-kernel" : "~2.3|~3.0"
     },
+    "suggest": {
+        "knplabs/knp-menu-bundle": "2.0"
+    },
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
