--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
         "php" : ">=5.6",
         "symfony/config" : "~2.3|~3.0",
         "symfony/dependency-injection" : "~2.3|~3.0",
-        "symfony/http-kernel" : "~2.3|~3.0"
-    },
-    "suggest": {
+        "symfony/http-kernel" : "~2.3|~3.0",
         "knplabs/knp-menu-bundle": "2.0"
     },
     "minimum-stability": "dev",
